ARM: dts: stm32mp: Reuse identical files from devicetree-rebasing
The directory structure of DTS files imported from devicetree-rebasing
repo doesn't comply with u-boot build infrastructure. So lets rather use
soft links to reuse identical DTS/DTSI files from devicetree-rebasing
directory.

Ideally it should be possible to soft link all the DTS/DTSI files if the
platform is compliant with DT bindings. Currently that's not the case
with stm32mp, so soft link only those files with are exactly identical.

Signed-off-by: Sumit Garg <sumit.garg@linaro.org>

--- a/arch/arm/dts/stm32mp135.dtsi
+++ b/arch/arm/dts/stm32mp135.dtsi
@@ -1,12 +1,1 @@
-// SPDX-License-Identifier: (GPL-2.0+ OR BSD-3-Clause)
-/*
- * Copyright (C) STMicroelectronics 2021 - All Rights Reserved
- * Author: Alexandre Torgue <alexandre.torgue@foss.st.com> for STMicroelectronics.
- */
-
-#include "stm32mp133.dtsi"
-
-/ {
-	soc {
-	};
-};
+../../../devicetree-rebasing/src/arm/st/stm32mp135.dtsi
